<resources>
    <string name="app_name">HealthPal</string>
    <string name="string_welcome_sign_in">Hi, Welcome back!</string>
    <string name="string_hint_email">Your email</string>
    <string name="string_hint_password">Password</string>
    <string name="string_sign_in">Sign In</string>
    <string name="string_forgot_password">Forgot password?</string>
    <string name="string_sign_up_in_sign_in_full">Don\'t have an account? Sign Up</string>
    <string name="string_sign_up">Sign Up</string>
    <string name="string_create_account">Create Account</string>
    <string name="string_description_sign_up">We are here to help you</string>
    <string name="string_sign_in_in_sign_up">Do you have an account? Sign In</string>
    <string name="do_not_leave_this_field_blank">Do not leave this field blank</string>
    <string name="invalid_email">Invalid email address</string>
    <string name="invalid_password">Password must contain at least 8 characers</string>
    <string name="string_title_edit_profile">Edit Your Profile</string>
    <string name="string_hint_full_name">Your Full Name</string>
    <string name="string_hint_gender">Gender</string>
    <string name="string_hint_nick_name">Nickname</string>
    <string name="string_hint_mail">name@example.com</string>
    <string name="string_save">Save</string>
    <string name="string_gender_male">Male</string>
    <string name="string_gender_female">Female</string>
    <string name="string_gender_other">Other</string>
    <string name="string_congratulations">Congratulations!</string>
    <string name="string_account_ready">Your account is ready to use. You will be redirected to the Home Page in a few seconds…</string>
    <string name="string_done">Done</string>
    <string name="string_edit_your_appointment">Edit your appointment</string>
    <string name="string_search_doctor">Search doctor…</string>
    <string name="string_home">Home</string>
    <string name="string_booking">Booking</string>
    <string name="string_profile">Profile</string>
    <string name="string_search_doctor_title">All Doctors</string>
    <string name="string_search_doctor_count">%1$d founds</string>
    <string name="string_doctor_details">Doctor Details</string>
    <string name="string_patients">Patients</string>
    <string name="string_years_of_experience">experience</string>
    <string name="string_rating">ratings</string>
    <string name="string_about_me">About me</string>
    <string name="string_dummy_about_me">Dr. David Patel, a dedicated cardiologist, brings a wealth of experience to Golden Gate Cardiology Center in Golden Gate, CA. view more</string>
    <string name="string_working_time">Working Time</string>
    <string name="string_dummy_working_time">Monday-Friday, 08.00 AM-18.00 pM</string>
    <string name="string_book_appointment">Book Appointment</string>
    <string name="string_edit_profile">Edit Profile</string>
    <string name="string_log_out">Log Out</string>
    <string name="string_favorite">Favorite</string>
    <string name="string_notification">Notification</string>
    <string name="string_settings">Settings</string>
    <string name="string_my_booking">My Bookings</string>
    <string name="string_cancel">Cancel</string>
    <string name="string_reschedule">Re-Schedule</string>
    <string name="string_categories">Categories</string>
    <string name="string_see_all">See All</string>
    <string name="string_review_nums">%1$d reviews</string>
    <string name="string_review_num">%1$d review</string>
    <string name="string_reviews">reviews</string>
    <string name="string_Reviews">Reviews</string>
    <string name="string_booking_appointment">Booking Appointment</string>
    <string name="string_select_date">Select Date</string>
    <string name="string_select_time">Select Time</string>
    <string name="string_choose_image">Choose Image</string>
    <string name="string_take_from_gallery">Take from gallery</string>
    <string name="string_take_from_camera">Take from Camera</string>
    <string name="string_edit_profile_successfully">Edit profile successfully</string>
    <string name="string_number_new_notification">%1$d new</string>
    <string name="string_mark_all_as_read">Mark all as read</string>
    <string name="string_star_ascending">Star Ascending</string>
    <string name="string_star_descending">Star Descending</string>
    <string name="string_reviews_descending">Review Descending</string>
    <string name="string_review_ascending">Review Ascending</string>
    <string name="string_default">Default</string>
    <string name="string_appointment">Appointment</string>
    <string name="string_working">Working</string>
    <string name="string_list_working_shift">List working shift</string>
    <string name="string_from_date">From: %1$s</string>
    <string name="string_to_date">To: %1$s</string>
    <string name="string_add_shift">Add Shift</string>
    <string name="string_select_all">Select all</string>
    <string name="string_date_time_of_shift">%1$s - %2$s\n%3$s</string>
    <string name="string_clear_all">Clear all</string>
    <string name="string_hint_your_age">Your Age</string>
    <string name="string_hint_your_date_of_birth">Your Date of Birth</string>
    <string name="string_hint_your_address">Your Address</string>
    <string name="string_hintyour_district">Your District</string>
    <string name="string_hint_your_city">Your City</string>
    <string name="string_hint_your_insurance_code">Your Insurance Code</string>
    <string name="string_hint_your_phone_number">Your Phone Number</string>
    <string name="string_ok">OK</string>
    <string name="string_error">Error occured</string>
    <string name="string_your_symptoms">Your Symptoms</string>
    <string name="string_describe_your_symptoms">Describe your symptoms</string>
    <string name="string_my_appointment">My Appointment</string>
    <string name="reschedule">Reschedule</string>
    <string name="string_doctor_name">Dr. %1$s</string>
    <string name="string_appointment_detail">Appointment Detail</string>
    <string name="string_detail_symptom">Detail Symptom</string>
    <string name="string_detail_patient_information">Detail Patient Information</string>
    <string name="string_full_name">Full name</string>
    <string name="string_date_of_birth">Date of Birth</string>
    <string name="age">Age</string>
    <string name="string_email">Email</string>
    <string name="string_phone_number">Phone number</string>
    <string name="string_address_line">Address Line</string>
    <string name="string_district">District</string>
    <string name="string_city">City</string>
    <string name="string_insurance_code">Insurance code</string>
    <string name="string_your_description">Your Description</string>
    <string name="string_functions">Functions</string>
    <string name="string_register_shift">Register shift</string>
    <string name="string_my_appointments">My Appointments</string>
    <string name="string_upcoming_appointment">Upcoming Appointment</string>
    <string name="string_a_z"><![CDATA[A -> Z]]></string>
    <string name="string_z_a"><![CDATA[Z -> A]]></string>
    <string name="string_years_of_experiences">Years of Experience</string>
    <string name="string_number_of_yoe">%1$d years of experience</string>
    <string name="string_there_is_no_shift_available_to_register">There is no shift available to register</string>
    <string name="string_view_detail">View Details</string>
    <string name="string_cancel_appointment">Cancel Appointment</string>
    <string name="string_empty_appointment">You do not have any appointment yet.</string>
    <string name="loadmore_message">Loading more...</string>
    <string name="string_create_profile_successfully">Create profile successfully</string>
    <string name="string_cert">Certificates</string>
    <string name="string_symptoms_placeholder">Symptoms: %1$s</string>
    <string name="string_complete_appointment">Complete Appointment</string>
    <string name="string_empty_appointment_today">You don\'t have any appointment today.</string>
    <string name="string_empty_noti">You don\'t have any notification yet</string>
    <string name="string_department">Department</string>
    <string name="string_message">Message</string>
    <string name="string_hint_chat_edt">Aa</string>
    <string name="string_take_picture">Take Picture</string>
    <string name="string_record_video">Record Video</string>
    <string name="cancel_view_attachment_talk_room">Cancel</string>
    <string name="sent">Sent</string>
    <string name="sending">Sending</string>
    <string name="seen">Seen</string>
    <string name="failed">Sent failed</string>
    <string name="start_conversation">You have booked appointment with this doctor.\nLet\'s start the conversation!</string>


    <string-array name="gender_options">
        <item>Male</item>
        <item>Female</item>
        <item>Other</item>
    </string-array>

    <string-array name="booking_status">
        <item>Upcoming</item>
        <item>Completed</item>
<!--        <item>Cancelled</item>-->
    </string-array>

    <string-array name="working_tab">
        <item>Register new shift</item>
        <item>My shifts</item>
    </string-array>

    <string-array name="doctor_appointment_tab">
        <item>Upcoming</item>
        <item>Completed</item>
    </string-array>

</resources>