<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@drawable/bg_dialog_congratulation"
    android:padding="16dp">

    <TextView
        android:id="@+id/tvChooseImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/string_choose_image"
        android:textSize="@dimen/common_size_20sp"
        android:textStyle="bold"
        android:textColor="@color/color_1C2A3A"
        android:layout_gravity="center"
        android:paddingBottom="8dp" />

    <Button
        android:id="@+id/btnGallery"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/string_take_from_gallery" />

    <Button
        android:id="@+id/btnCamera"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/string_take_from_camera"
        android:layout_marginTop="8dp" />
</LinearLayout>