<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".moduleDoctor.presentation.doctorHomeContainer.working.registerNewShift.RegisterNewShiftFragment">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvListShift"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/common_size_20dp"
            android:layout_marginBottom="@dimen/common_size_10dp"
            android:text="@string/string_list_working_shift"
            android:textColor="@color/color_1C2A3A"
            android:textSize="@dimen/common_text_size_16sp"
            android:textStyle="bold"
            android:layout_marginStart="@dimen/common_size_20dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvFromDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/string_from_date"
            android:textColor="@color/color_1C2A3A"
            android:textSize="@dimen/common_text_size_16sp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="@dimen/common_size_20dp"
            android:layout_marginBottom="@dimen/common_size_10dp"
            app:layout_constraintTop_toBottomOf="@id/tvListShift" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvToDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/string_to_date"
            android:textColor="@color/color_1C2A3A"
            android:textSize="@dimen/common_text_size_16sp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="@dimen/common_size_20dp"
            android:layout_marginBottom="@dimen/common_size_30dp"

            app:layout_constraintTop_toBottomOf="@id/tvFromDate" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvSelectAll"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/common_size_10dp"
            android:text="@string/string_select_all"
            android:textColor="@color/color_1C2A3A"
            android:layout_marginEnd="@dimen/common_size_20dp"
            android:textSize="@dimen/common_text_size_16sp"
            android:layout_marginTop="@dimen/common_size_10dp"
            app:layout_constraintBottom_toTopOf="@id/rvShift"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvToDate" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvShift"
            android:layout_width="match_parent"
            android:layout_height="@dimen/common_size_0dp"
            app:layout_constraintTop_toBottomOf="@id/tvSelectAll"
            app:layout_constraintBottom_toTopOf="@id/btnAddShift"
            tools:listitem="@layout/shift_item"
            android:layout_marginHorizontal="@dimen/common_size_20dp"
            android:nestedScrollingEnabled="false"
            />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnAddShift"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/rvShift"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginVertical="@dimen/common_size_10dp"
            android:text="@string/string_add_shift"
            android:background="@drawable/bg_button"
            android:textColor="@color/white"
            android:textSize="@dimen/common_text_size_16sp"
            android:layout_marginHorizontal="@dimen/common_size_20dp"
            android:textStyle="bold"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>


</layout>
