<?xml version="1.0" encoding="utf-8"?>
<layout>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".presentation.homeContainer.doctorDetail.DoctorDetailFragment">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/ivBack"
            android:layout_width="@dimen/common_size_50dp"
            android:layout_height="@dimen/common_size_50dp"
            android:layout_marginStart="@dimen/common_size_10dp"
            android:layout_marginTop="@dimen/common_size_20dp"
            android:padding="@dimen/common_size_10dp"
            android:src="@drawable/ic_back"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/common_size_30dp"
            android:text="@string/string_doctor_details"
            android:textColor="@color/black"
            android:textSize="@dimen/common_size_20sp"
            android:textStyle="bold"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/ivFavorite"
            android:layout_width="@dimen/common_size_50dp"
            android:layout_height="@dimen/common_size_50dp"
            android:layout_marginTop="@dimen/common_size_20dp"
            android:padding="@dimen/common_size_15dp"
            android:src="@drawable/ic_heart"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <include
            android:id="@+id/doctor_detail"
            layout="@layout/doctor_item"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/common_size_30dp"
            android:layout_marginTop="@dimen/common_size_10dp"
            android:elevation="@dimen/common_size_30dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ivFavorite" />

        <include
            android:id="@+id/doctor_badge"
            layout="@layout/doctor_badge"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/common_size_30dp"
            android:layout_marginTop="@dimen/common_size_20dp"
            app:layout_constraintTop_toBottomOf="@id/doctor_detail" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvAbout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/common_size_30dp"
            android:layout_marginTop="@dimen/common_size_20dp"
            android:text="@string/string_about_me"
            android:textColor="@color/color_1C2A3A"
            android:textSize="@dimen/common_size_20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/doctor_badge" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvAboutContent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/common_size_30dp"
            android:layout_marginTop="@dimen/common_size_10dp"
            android:text="@string/string_dummy_about_me"
            android:textSize="@dimen/common_size_16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvAbout" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvWorkingTimeTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/common_size_30dp"
            android:layout_marginTop="@dimen/common_size_20dp"
            android:text="@string/string_working_time"
            android:textColor="@color/color_1C2A3A"
            android:textSize="@dimen/common_size_20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvAboutContent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvWorkingTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/common_size_30dp"
            android:layout_marginTop="@dimen/common_size_10dp"
            android:text="@string/string_dummy_working_time"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvWorkingTimeTitle" />
        />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnBookAppointment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/common_size_30dp"
            android:layout_marginTop="@dimen/common_size_40dp"
            android:background="@drawable/bg_category_checked"
            android:text="@string/string_book_appointment"
            android:textColor="@color/white"
            android:textSize="@dimen/common_text_size_16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvWorkingTime" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
