<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".presentation.homeContainer.home.HomeFragment">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvGreeting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/common_size_20dp"
            android:layout_marginTop="@dimen/common_size_10dp"
            android:text="Good Morning!"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/common_size_20dp"
            android:layout_marginTop="@dimen/common_size_5dp"
            android:text="@string/string_doctor_name"
            android:textColor="@color/color_1C2A3A"
            android:textSize="@dimen/common_text_size_18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvGreeting" />



        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvUpcomingAppointment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/common_size_20dp"
            android:layout_marginTop="@dimen/common_size_40dp"
            android:text="Upcoming Appointment"
            android:textColor="@color/color_1C2A3A"
            android:textSize="@dimen/common_size_16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvName" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvSeeAll"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/common_size_40dp"
            android:layout_marginEnd="@dimen/common_size_20dp"
            android:text="@string/string_see_all"
            android:textColor="@color/color_6b7280"
            android:textSize="@dimen/common_size_14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvName" />

        <FrameLayout
            android:id="@+id/layoutAppointment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvUpcomingAppointment">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvAppointment"
                android:layout_width="match_parent"
                android:layout_height="370dp"
                android:layout_marginTop="@dimen/common_size_20dp"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"

                tools:listitem="@layout/doctor_appointment_item" />

            <LinearLayout
                android:id="@+id/layoutEmptyAppointment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="vertical"
                android:visibility="gone">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/ivEmptyAppointment"
                    android:layout_width="@dimen/common_size_100dp"
                    android:layout_height="@dimen/common_size_100dp"
                    android:src="@drawable/ic_no_appointment"
                    android:layout_gravity="center"
                    />

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/string_empty_appointment_today"
                    android:textSize="@dimen/common_text_size_16sp"
                    android:textStyle="bold"
                    />


            </LinearLayout>
        </FrameLayout>





        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvFunction"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/common_size_20dp"
            android:layout_marginTop="@dimen/common_size_40dp"
            android:text="@string/string_functions"
            android:textColor="@color/color_1C2A3A"
            android:textSize="@dimen/common_size_16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/layoutAppointment" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/icRegisterShift"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/common_size_30dp"
            android:layout_marginTop="@dimen/common_size_20dp"
            android:src="@drawable/ic_noti_schedule_changed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvFunction" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/icRegisterShift"
            app:layout_constraintStart_toStartOf="@id/icRegisterShift"
            app:layout_constraintEnd_toEndOf="@id/icRegisterShift"
            android:text="@string/string_register_shift"
            android:layout_marginTop="@dimen/common_size_10dp"
            />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/icAppointment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/common_size_20dp"
            android:src="@drawable/ic_appointment"
            app:layout_constraintEnd_toStartOf="@+id/icEditProfile"
            app:layout_constraintStart_toEndOf="@+id/icRegisterShift"
            app:layout_constraintTop_toBottomOf="@id/tvFunction" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/icAppointment"
            app:layout_constraintStart_toStartOf="@id/icAppointment"
            app:layout_constraintEnd_toEndOf="@id/icAppointment"
            android:text="@string/string_my_appointments"
            android:layout_marginTop="@dimen/common_size_10dp"
            />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/icEditProfile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/common_size_20dp"
            android:layout_marginEnd="@dimen/common_size_30dp"
            android:src="@drawable/ic_function_edit_profile"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvFunction"
            />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/icEditProfile"
            app:layout_constraintStart_toStartOf="@id/icEditProfile"
            app:layout_constraintEnd_toEndOf="@id/icEditProfile"
            android:text="@string/string_edit_profile"
            android:layout_marginTop="@dimen/common_size_10dp"
            />


    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
